HTML/MiniProject/style.css
/* Navbar */
#navbar {
    background: #333;
    color: #fff;
    overflow: auto;
    text-align: ;
    width: 100%;
    box-sizing: border-box; 
    height: 5%; 
  }

  #navbar .logo {
    float: none;
    margin: 1%;
    padding: -3%;
    font-size: 3vw;
  }


@media screen and (min-width: 751px) {
    #navbar {
         
    }    
}
@media screen and (max-width: 750px) {
    #navbar {
        
         
    }

    #navbar .logo {
        /* margin: -8px; */
      }
}

.c-title{

    font-size: 3vw;
}


/* Showcase */

#showcase {
    background: url('img/image.jpg') no-repeat center center/cover;
    width: 100%; 
    position: relative;
    background-size: cover;
    background-position: center;
  }

  .container::after {
	position: absolute;
	content: '';
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	box-shadow: inset 0 0 10px 15px #FFF;
}
  
  #showcase .showcase-content {
    color: #fff;
    text-align: center;
    margin: 0%;
    left: 50%;
    top: 50%;
    transform: translate(0%,90%);
  }
  
  #showcase .showcase-content h1 {
    font-size: 3vw;
    line-height: 1.2em;
    margin: 0%;
  }
  
  #showcase .showcase-content p{
    font-size: 1vw;
    line-height: 1.7em;
    margin: 0%;
  }


@media screen and (min-width: 751px) {
    #showcase {
        height: 50vh;
    }    
}
@media screen and (max-width: 750px) {
    #showcase {
        height: 30vh;
    }
  }

  



  /* pie chart */
@media screen and (min-width: 751px) {
    #pie-chart{
        width: 80%;
        margin-left: 10%;

    }

    .c-title{
        background: #fff;
        height: 50px;
       


    }


    .pie-chart-wrap {
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      -webkit-box-pack: center;
          -ms-flex-pack: center;
              justify-content: center;
      -webkit-box-align: center;
          -ms-flex-align: center;
              align-items: center;
              
    }
  }
   
  .box {
    position: relative;
    min-width: 200px;
    width: 33.3333333333%;
    height: 300px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    background: #fff;
    -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
  }
  @media screen and (max-width: 750px) {
    .box {
      width: 100%;
    }
  }
  @media screen and (min-width: 751px) {
    .box + .box {
      margin-left: 40px;
    }
  }
  @media screen and (max-width: 750px) {
    .box + .box {
      margin-top: 20px;
    }
  }
  .box .percent {
    position: relative;
    width: 150px;
    height: 150px;
  }
  .box .percent svg {
    position: relative;
    width: 150px;
    height: 150px;
    -webkit-transform: rotate(-90deg);
            transform: rotate(-90deg);
  }
  .box .percent svg circle {
    position: relative;
    fill: none;
    stroke-width: 10;
    stroke: #f3f3f3;
    stroke-dasharray: 440;
    stroke-dashoffset: 0;
    stroke-linecap: round;
  }
  .box .percent .number {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    color: #111;
  }
  .box .percent .number .title {
    font-size: 50px;
  }
  .box .percent .number .title span {
    font-size: 22px;
  }
  .box .text {
    padding: 10px 0 0;
    text-align: center;
    font-weight: bold;
    font-size: 14px;
  }
  .box .percent .line {
    -webkit-animation: circleAnim 1s forwards;
            animation: circleAnim 1s forwards;
  }
  .box.blue .percent .line {
    stroke-dashoffset: 220.8;
    stroke: #03a9f4;
  }
  .box.red .percent .line {
    stroke-dashoffset: 290;
    stroke: #ff3051;
  }
  .box.green .percent .line {
    stroke-dashoffset: 370.0;
    stroke: #1fd26c;
  }


  /* Footer */
#main-footer {
    text-align: center;
    background: #444;
    color: #fff;
    padding: 20px;
  }
   
  @-webkit-keyframes circleAnim {
    0% {
      stroke-dasharray: 0 440;
    }
    99.9%, to {
      stroke-dasharray: 440 440;
    }
  }
   
  @keyframes circleAnim {
    0% {
      stroke-dasharray: 0 440;
    }
    99.9%, to {
      stroke-dasharray: 440 440;
    }
  }



  /* text */
.box10{
    display: flex;
    margin: 2em 0.8em;
    background: #f1f1f1;
    box-shadow:  2px 4px rgba(0, 0, 0, 0.22);
    
}
.box10 .box-title {
    font-size: 1.2em;
    background: #03a9f4;
    padding: 4px;
    text-align: center;
    color: #FFF;
    font-weight: bold;
    letter-spacing: 0.05em;
}
.box10 p {
    padding: 15px 20px;
    margin: 10;
    font-size: 1.2em;
    color:#262d29;
    font-weight:500; 
    background: rgba(251, 251, 251, 0.475);
}
.box10 .img1 {
    background: url('img/image1.jpg') no-repeat center center/cover;
 
}

.box20  {
    display: flex;
    margin: 2em 0.8em;
    background: #f1f1f1;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.22);
}
.box20 .box-title {
    font-size: 1.2em;
    background:  #ff3051;
    padding: 4px;
    text-align: center;
    color: #FFF;
    font-weight: bold;
    letter-spacing: 0.05em;
}
.box20 p {
    padding: 15px 20px;
    margin: 10;
    font-size: 1.2em;
    color:#262d29;
    font-weight:500; 
    background: rgba(251, 251, 251, 0.475);
}
.box20 .img2 {
    background: url('img/image3.jpg') no-repeat center center/cover;
 
}

.box30 {
    display: flex;
    margin: 2em 0.8em;
    background: #f1f1f1;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.22);
}
.box30 .box-title {
    font-size: 1.2em;
    background: #1fd26c;
    padding: 4px;
    text-align: center;
    color: #FFF;
    font-weight: bold;
    letter-spacing: 0.05em;
}
.box30 p {
    padding: 15px 20px;
    margin: 10;
    font-size: 1.2em;
    color:#262d29;
    font-weight:500; 
    background: rgba(251, 251, 251, 0.475);
}

.box30 .img3 {
    background: url('img/image4.jpg') no-repeat center center/cover;
 
}

@media screen and (min-width: 751px) {

    .b-title{
        width: 80%;
        margin-left: 10%;
        background: #fff;
        height: 20px;
        font-size: 3vw;
    }

    .chart {
        position: relative;
        width: 100%;
        width: 27%;
        height: 500px;
        display: -webkit-box;
        -ms-flex-align: center;
        align-items: center;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
    
        margin-left: 10%;
          
      }

      .box10 + .box20 {
        margin-left: 20px;
      }
      .box20 + .box30 {
        margin-left: 20px;
    }

    .youtube{
        width: 80%;
        margin-left: 11%;
    }

    .youtube1 + .youtube2 {
        margin-left: 40px;
    }
    .video{
        
        width: 80%;
        margin-left: 10%;
        background: #fff;
        height: 30px;
        font-size: 3vw;
    }

}

